--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calendar-module",
-  "version": "1.1.3",
+  "version": "1.2.2",
   "description": "Календарь-виджет для интеграции в платформы",
   "main": "dist/index.js",
   "files": [
@@ -12,16 +12,17 @@
     "prepack": "npm run build"
   },
   "peerDependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
     "@xyflow/react": "^12.6.0",
+    "moment": "^2.30.1",
+    "react": "^19.0.0",
     "react-big-calendar": "^1.19.4",
-    "moment": "^2.30.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.8",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
     "@types/react-big-calendar": "^1.0.0",
+    "@types/react-dom": "^18.0.0",
     "typescript": "^5.0.0"
   },
   "keywords": [
@@ -67,9 +68,9 @@
     "moment-timezone": "^0.5.48",
     "object-assign": "^4.1.1",
     "prop-types": "^15.8.1",
-    "react": "^19.2.3",
+    "react": "^19.0.0",
     "react-big-calendar": "^1.19.4",
-    "react-dom": "^19.2.3",
+    "react-dom": "^19.0.0",
     "react-is": "^16.13.1",
     "react-lifecycles-compat": "^3.0.4",
     "react-overlays": "^5.2.1",
